--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -4,4 +4,4 @@ java.naming.provider.url = tcp://localhost:61616
 
 queue.financeiro = fila.financeiro
 
-topic.MyTopic = example.MyTopic
+topic.loja = topico.loja
