--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -4,4 +4,6 @@ java.naming.provider.url = tcp://localhost:61616
 
 queue.financeiro = fila.financeiro
 
+queue.DLQ = ActiveMQ.DLQ
+
 topic.loja = topico.loja
